force-app/main/default/objects/Feedback__c/fields/Feedback_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Assignment_Date__c</fullName>
    <description>To auto populate date when feedback assign to an user</description>
    <label>Feedback Assignment Date</label>
    <type>Date</type>
</CustomField>