force-app/main/default/objects/Feedback__c/fields/Feedback_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Disposition__c</fullName>
    <description>To capture feedback state</description>
    <label>Feedback Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Feedback_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>