force-app/main/default/objects/Feedback__c/fields/Feedback_Owner__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Owner__c</fullName>
    <description>To capture feedback owner</description>
    <formula>IF(Owner:Queue.QueueName = &quot;&quot;,
        HYPERLINK(&apos;/&apos; + OwnerId , Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName),
        HYPERLINK(&apos;/p/own/Queue/d?id=&apos; + OwnerId , Owner:Queue.QueueName )
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feedback Owner</label>
    <type>Text</type>
</CustomField>