force-app/main/default/objects/Feedback__c/fields/Feedback_Reason__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Reason__c</fullName>
    <description>To capture feedback reason for the given feedback</description>
    <label>Feedback Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wrong Information</fullName>
            </value>
            <value>
                <fullName>Typo</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Missing Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>