force-app/main/default/objects/Feedback__c/fields/Feedback_Status__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Status__c</fullName>
    <description>To capture if status is open or closed</description>
    <label>Feedback Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>