force-app/main/default/objects/Feedback__c/fields/Knowledge_Article_Link__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To capture Knowledge article for which feedback given.</description>
    <label>Knowledge Article Link</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>