force-app/main/default/objects/Feedback__c/fields/Reopen_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Reason__c</fullName>
    <description>User when changes the feedback status to re-open , Reason is must to mention.</description>
    <label>Reopen  Reason</label>
    <type>TextArea</type>
</CustomField>