force-app/main/default/objects/Feedback__c/validationRules/check_disposition_to_reopen_feedback.validationRule-meta.xml
<ValidationRule>
    <fullName>check_disposition_to_reopen_feedback</fullName>
    <active>true</active>
    <description>Reopen status should be enabled only when previous value of picklist is closed</description>
    <errorConditionFormula>AND(
NOT(
(TEXT(PRIORVALUE(Feedback_Disposition__c))=
$Label.FeedbackDispositionCancelled) ||
(TEXT(PRIORVALUE(Feedback_Disposition__c)) = $Label.FeedbackDispositionResolved)
),
ISCHANGED(Feedback_Disposition__c),
ISPICKVAL(Feedback_Disposition__c,&apos;Reopened&apos;),
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c)
)</errorConditionFormula>
    <errorDisplayField>Feedback_Disposition__c</errorDisplayField>
    <errorMessage>Status &apos;Reopened&apos; valid for only Resolved/Cancelled feedback&apos;s disposition</errorMessage>
</ValidationRule>