force-app/main/default/objects/Feedback__c/validationRules/check_reopen_reason_is_null.validationRule-meta.xml
<ValidationRule>
    <fullName>check_reopen_reason_is_null</fullName>
    <active>true</active>
    <description>When user changes the feedback status to Reopen then Reason for reopen is mandatory</description>
    <errorConditionFormula>AND(
ISPICKVAL(Feedback_Disposition__c, &quot;Reopened&quot;),
ISBLANK(Reopen_Reason__c),
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c)
)</errorConditionFormula>
    <errorDisplayField>Reopen_Reason__c</errorDisplayField>
    <errorMessage>Please enter reopen reason</errorMessage>
</ValidationRule>