force-app/main/default/objects/Feedback__c/listViews/Feedback_Assigned_To_Me.listView-meta.xml
<ListView>
    <fullName>Feedback_Assigned_To_Me</fullName>
    <columns>NAME</columns>
    <columns>Feedback_Owner__c</columns>
    <columns>Feedback_Status__c</columns>
    <columns>Feedback_Assignment_Date__c</columns>
    <columns>Feedback_Disposition__c</columns>
    <columns>Feedback_Reason__c</columns>
    <columns>Knowledge_Article_Link__c</columns>
    <filterScope>Mine</filterScope>
    <label>Feedback Assigned To Me</label>
</ListView>