force-app/main/default/objects/Feedback__c/listViews/Feedback_For_Review.listView-meta.xml
<ListView>
    <fullName>Feedback_For_Review</fullName>
    <columns>NAME</columns>
    <columns>Feedback_Owner__c</columns>
    <columns>Feedback_Status__c</columns>
    <columns>Feedback_Assignment_Date__c</columns>
    <columns>Feedback_Disposition__c</columns>
    <columns>Feedback_Reason__c</columns>
    <columns>Knowledge_Article_Link__c</columns>
    <filterScope>Queue</filterScope>
    <label>Feedback For Review</label>
    <queue>Feedback_Reviewers</queue>
</ListView>