force-app/main/default/objects/Feedback__c/listViews/Feedback_Given_By_Me.listView-meta.xml
<ListView>
    <fullName>Feedback_Given_By_Me</fullName>
    <columns>NAME</columns>
    <columns>Feedback_Owner__c</columns>
    <columns>Feedback_Status__c</columns>
    <columns>Feedback_Assignment_Date__c</columns>
    <columns>Feedback_Disposition__c</columns>
    <columns>Feedback_Reason__c</columns>
    <columns>Knowledge_Article_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_My_Feedback__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Feedback Given By Me</label>
</ListView>