force-app/main/default/objects/Feedback__c/listViews/Feedback_Reviewers_Feedback.listView-meta.xml
<ListView>
    <fullName>Feedback_Reviewers_Feedback</fullName>
    <filterScope>Queue</filterScope>
    <label>Feedback Reviewers</label>
    <queue>Feedback_Reviewers</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>